--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+    <!-- Header start -->
     <header>
         <nav>
             <h2 class="nav_title">G3 Architects</h2>
@@ -22,13 +24,33 @@
         <div class="banner">
             <div class="banner_content">
                 <h1 class="banner_title">Brand New Group of Architects </h1>
-                <p class="banner_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner_describtion">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn_primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
         </div>
     </header>
+
     <main>
+
+        <!-- Teams section -->
+        <section class="teams_container">
+            <div class="teams_img_container">
+                <img src="images/team1.png" alt=""><img src="images/team2.png" alt=""><img src="images/team3.png"
+                    alt=""><img src="images/team4.png" alt="">
+            </div>
+            <div class="teams_content">
+                <h3 class="teams_title"> <span class="quick_list">Quick list</span> <span>of Our</span> <span class="text_feture">Features</span> </h3>
+                <p class="teams_descrition">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn_primary">Explore more</button>
+
+            </div>
+        </section>
+
 
     </main>
     <footer>
