--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="banner">
             <div class="banner_content">
                 <h1 class="banner_title">Brand New Group of Architects </h1>
-                <p class="banner_describtion">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn_primary">Explore More</button>
@@ -42,8 +42,8 @@
                     alt=""><img src="images/team4.png" alt="">
             </div>
             <div class="teams_content">
-                <h3 class="teams_title"> <span class="quick_list">Quick list</span> <span>of Our</span> <span class="text_feture">Features</span> </h3>
-                <p class="teams_descrition">There are many variations of passages of Lorem Ipsum available, but the
+                <h3 class="teams_title"> <span class="quick_list text_gary">Quick list</span> <span>of Our</span> <span class="text_feture">Features</span> </h3>
+                <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn_primary">Explore more</button>
