fact section data

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header start -->
     <header>
         <nav>
-            <h2 class="nav_title">G3 Architects</h2>
+            <h2 class="section_title">G3 Architects</h2>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -51,6 +51,39 @@
             </div>
         </section>
 
+        <!-- features section -->
+        <section class="features">
+
+        </section>
+
+    <!-- fact section -->
+    <section class="facts">
+        <h3 class="section_title">Some Facts</h3>
+        <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="facts_card_container">
+            <!-- .card*4>img+h2.card_stats+p.card_ title -->
+            <div class="card">
+                <img src="images/icons/ribon.png" alt="">
+                <h2 class="card_stats">54</h2>
+                <p class="card_ title text_gary">Awards Winnings</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/projects.png" alt="">
+                <h2 class="card_stats">1458</h2>
+                <p class="card_ title text_gary">Project Finished</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/customers.png" alt="">
+                <h2 class="card_stats">590</h2>
+                <p class="card_ title text_gary">Clients Worked</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/email.png" alt="">
+                <h2 class="card_stats">22578</h2>
+                <p class="card_ title text_gary">Email Send</p>
+            </div>
+        </div>
+    </section>
 
     </main>
     <footer>
