--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     alt=""><img src="images/team4.png" alt="">
             </div>
             <div class="teams_content">
-                <h3 class="teams_title"> <span class="quick_list text_gary">Quick list</span> <span>of Our</span> <span class="text_feture">Features</span> </h3>
+                <h3 class="teams_title"> <span class="quick_list text_gary">Quick list</span> <span>of Our</span> <span
+                        class="text_feture">Features</span> </h3>
                 <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
@@ -56,35 +57,47 @@
 
         </section>
 
-    <!-- fact section -->
-    <section class="facts">
-        <h3 class="section_title">Some Facts</h3>
-        <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-        <div class="facts_card_container">
-            <!-- .card*4>img+h2.card_stats+p.card_ title -->
-            <div class="card">
-                <img src="images/icons/ribon.png" alt="">
-                <h2 class="card_stats">54</h2>
-                <p class="card_ title text_gary">Awards Winnings</p>
+        <!-- fact section -->
+        <section class="facts">
+            <h3 class="section_title">Some Facts</h3>
+            <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration.</p>
+            <div class="facts_card_container">
+                <!-- .card*4>img+h2.card_stats+p.card_ title -->
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card_stats">54</h2>
+                    <p class="card_ title text_gary">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card_stats">1458</h2>
+                    <p class="card_ title text_gary">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card_stats">590</h2>
+                    <p class="card_ title text_gary">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card_stats">22578</h2>
+                    <p class="card_ title text_gary">Email Send</p>
+                </div>
             </div>
-            <div class="card">
-                <img src="images/icons/projects.png" alt="">
-                <h2 class="card_stats">1458</h2>
-                <p class="card_ title text_gary">Project Finished</p>
-            </div>
-            <div class="card">
-                <img src="images/icons/customers.png" alt="">
-                <h2 class="card_stats">590</h2>
-                <p class="card_ title text_gary">Clients Worked</p>
-            </div>
-            <div class="card">
-                <img src="images/icons/email.png" alt="">
-                <h2 class="card_stats">22578</h2>
-                <p class="card_ title text_gary">Email Send</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
+        <!-- sponcer section -->
+        <section class="sponcers">
+            <h3 class="section_title">Our Sponspors</h3>
+            <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration.</p>
+            <div class="sponcers_img_container">
+                <img src="images/sponsors/spotify.png" alt=""><img src="images/sponsors/amazon.png" alt=""><img
+                    src="images/sponsors/google.png" alt=""><img src="images/sponsors/telerama.png" alt=""><img
+                    src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
