--- a/index.html
+++ b/index.html
@@ -54,7 +54,39 @@
 
         <!-- features section -->
         <section class="features">
-
+            <div class="feature_content">
+                <h3 class="section_title ">Features you will <br> love & enjoy</h3>
+                <p class="text_gary">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="gray_text">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="gray_text">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="gray_text">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="gray_text">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature_img">
+                <img src="images/architect.png" alt="">
+                <div class="ten_years_batch">
+                    <h2>10+ Years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
 
         <!-- fact section -->
@@ -100,7 +132,9 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer_section">
+            <p class="text_gary text">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 
