make the feature seacton is responsive

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             </div>
         </section>
     </main>
-    <footer>
+    <!-- <footer>
         <div class="footer_section">
             <p class="text_gary text">All rights reserved copyright@2023 startup landing page design</p>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
