--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
             </div>
         </section>
     </main>
-    <!-- <footer>
+    <footer>
         <div class="footer_section">
-            <p class="text_gary text">All rights reserved copyright@2023 startup landing page design</p>
+            <p class="text_gary text">All rights reserved copyright</p>
+            <p class="text_gary text">@2023 startup landing page design</p>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
