--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
         </section>
     </main>
     <footer>
-        <div class="footer_section">
-            <p class="text_gary text">All rights reserved copyright</p>
-            <p class="text_gary text">@2023 startup landing page design</p>
+        <div>
+            <div class="footer_section">
+                <p class="text_gary text">All rights reserved copyright@2023 startup landing page design</p>
+            </div>
         </div>
     </footer>
 </body>
